--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
         </div>
         <div class="col-md-3 right panel text-center" style="display: none;">
-          <h2 id="monster-name"></h2>
-          <img id="monster-avatar" alt="Avatar" class="avatar" src="">
+          <h2 id="character-name"></h2>
+          <img id="character-avatar" alt="Avatar" class="avatar" src="">
           <div class="stat">HP <span id="monster-hp">200</span>/<span id="monster-max-hp">200</span></div>
         </div>
       </div>
